# arkime

./: .c8rc  .dockerignore  .eslintignore  .eslintrc.js  .gitignore  .gitlab-ci.yml  .lgtm.yml  .ncurc.json  .postcssrc.js  BUILD.md  CHANGELOG  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INTERNATIONALIZATION.md  LICENSE  Makefile.am  Makefile.in  NOTICE  OSX-compile-notes.txt  README  README.md  README.rst  SECURITY.md  aclocal.m4  bootstrap.sh  clear_npm.sh  common.css  config.ini  configure  configure.ac  docker-compose.yml  easybutton-build.sh  easybutton-config.sh  easybutton-singlehost.sh  easybutton-wisesetup.sh  easybutton.sh  eslint.config.js  index.html  (+5 more)
.claude/: CLAUDE.md
.claude/agents/: capture-parser.md  cont3xt-integration-creator.md  css-styling-expert.md  d3-network-viz-optimizer.md  elasticsearch-integration.md  express-api-builder.md  locale-sync.md  protocol-parser-architect.md  synthetic-pcap-updater.md  vue3-ui-developer.md
.githooks/: README.md  pre-commit  pre-push
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  new-protocol-parser.md
.github/workflows/: arm-build.yml  build-arm.yml  build.yml  codeql.yml  (+7 more)
agent/: agent.js  db.js  package.json
capture/: .astylerc  DESIGN.md  Makefile.in  agent.c  arkime.h  arkimeconfig.h.in  arkimeconfig.h.in~  bsb.h  cloud.c  command.c  config.c  db.c  db.ch.c  db.es.c  db.sqlite.c  dedup.c  detect.c  dll.h  drophash.c  es.c  field.c  hash.h  http.c  main.c  moloch.h  molochconfig.h.in  molochmagic.c  molochmagic.pl  mprotocol.c  nids.c  packet.c  parsers.c  plugins.c  pq.c  python.c  reader-bpf.c  reader-libpcap-file.c  reader-libpcap.c  reader-netmap.c  reader-null.c  (+20 more)
common/: UserService.js  Users.vue  api.notifier.js  arkime-input-group.css  arkimeCache.js  arkimeConfig.js  arkimeUtil.js  auth.js  banner.js  changePasswordSecret.js  common.css  git.js  jest.config.js  locales.js  mcpServer.js  middleware.js  notifier.js  notifier.notifme.js  notifier.snmp.js  notifier.syslog.js  package-lock.json  package.json  parliament.js  sigV4Connection.js  user.js  userDB.js  version.js.in  vueFilters.js
common2/: arkimeCache.js  arkimeConfig.js  auth.js  common.css  jest.config.js  notifier.js  package-lock.json  package.json  user.js
cont3xt/: Makefile.in  apiMcp.js  audit.js  cont3xt.js  db.js  descriptions.txt  integration.js  jest.config.js  linkGroup.js  links.js  normalizeCardField.js  overview.js  package-lock.json  package.json  test.sh  view.js
contrib/: decodeDrops.c  moloch_query  moloch_query.md  netflow2arkime.pl  tzsp_forwarder.c
db/: Makefile.in  ch.pl  daily.sh  db.pl  dstats.json  elasticsearch.yml.sample  init.sh  runes.sh.sample  sessions.json  stats.json  update.sh
docs/: esproxy-sigv4-design.md
foo/: package.json
helm/: .helmignore  Chart.yaml  README.md  arkime-kind.yaml  values.yaml
jsdoc/: body.hbs  dochelpers.js  returns.hbs  sig-name.hbs
notifiers/: provider.notifme.js
old_common/: arkimeUtil.js  version.js
parliament/: .angular-cli.json  .eslintignore  .eslintrc.js  .gitignore  Makefile.in  README.md  package-lock.json  package.json  parliament.example.json  parliament.js  server.js  tsconfig.json  tslint.json  upgrade.js
release/: CAPTURENOTICE  Configure  Configure.moloch  Dockerfile  Dockerfile.ja4  Makefile.in  README.md  README.txt  Vagrantfile  afterinstall.sh  afterinstall.sh.in  arkime_add_user.sh  arkime_config_interfaces.sh  arkime_update_geo.sh  arkimecapture.systemd.service  arkimecont3xt.systemd.service  arkimeparliament.systemd.service  arkimeviewer.systemd.service  arkimewise.systemd.service  build.yml  checkSettingsPage.pl  config.ini.sample  cont3xt.ini.sample  docker.sh  doit.sh  elasticsearch.demo.yml  elasticsearch.systemd.service  elasticsearch.upstart.conf  env.example  freebsdpkg.sh  getiteration.sh  incriteration.sh  logging.demo.yml  makeDockerBuild.sh  moloch-owl-text.eps  moloch-owl.eps  moloch_add_user.sh  moloch_update_geo.sh  molochcapture.systemd.service  molochcapture.upstart.conf  (+13 more)
tests/: ArkimeTest.pm  GeoLite2-Country.mmdb  Makefile  MolochTest.pm  README  Vagrantfile  adb.t  addUser.t  api-banner.t  api-buildquery.t  api-connections.t  api-cron.t  api-encodings.t  api-esadmin.t  api-files.t  api-fresh.t  api-history.t  api-hunt.t  api-mcp.t  api-multies.t  api-multiunique.t  api-notifiers.t  api-pcapng.t  api-s3.t  api-scrub.t  api-sessionDetail.t  api-sessions.t  api-shareables.t  api-shortcuts.t  api-spigraph.t  api-spigraphhierarchy.t  api-spigraphpie.t  api-spiview.t  api-stats.t  api-summary.t  api-tagging.t  api-unique.t  api-users.t  api-views.t  arkime.supp  (+159 more)
viewer/: .eslintignore  .eslintrc.js  .jshintrc  Makefile.in  README.md  SHAREABLES.md  addUser.js  apiBanner.js  apiConnections.js  apiCrons.js  apiHistory.js  apiHunts.js  apiMcp.js  apiMisc.js  apiNotifiers.js  apiSessions.js  apiShareables.js  apiShortcuts.js  apiStats.js  apiUsers.js  apiViews.js  arkimeparser.jison  arkimeparser.js  babel.config.js  buildQuery.js  config.dev.ini  config.js  db.ch.js  db.es.js  db.js  db.sqlite.js  decode.js  decryptPcap.js  esProxy.js  esProxyCredentials.js  internals.js  jest.config.js  karma.conf.js  molochparser.jison  molochparser.js  (+14 more)
wiseService/: .jshintrc  Makefile.in  README.md  hodi.groovy  molochwise.bro  package-lock.json  package.json  simpleSource.js  source.alienvault.js  source.databricks.js  source.elasticesearch.js  source.elasticsearch.js  source.elasticsearchfile.js  source.emergingthreats.js  source.fieldactions.js  source.file.js  source.hodi.js  source.hodiredis.js  source.isepxgrid.js  source.opendns.js  source.passivetotal.js  source.phpipam.js  source.redis.js  source.redisfile.js  source.reversedns.js  source.rightclick.js  source.splunk.js  source.threatq.js  source.threatstream.js  source.url.js  source.urlapi.js  source.valueactions.js  source.valueactionsfile.js  source.valueactionsredis.js  source.virustotal.js  source.wiseproxy.js  source.zeeklogs.js  sprintf.js  valueactionsfile.ini.sample  wiseCache.js  (+3 more)
(+1846 files in other folders)
